@@ -2,6 +2,10 @@
 buildstream 1.3.1
 =================
 
+  o BREAKING CHANGE: The `bst build` command no longer accepts the `--all` option. It
+    now accepts `--deps` with a choice of 'plan' (default) and 'all', for
+    equivalent behaviour.
+
   o Added `bst artifact show` subcommand which shows the cached status
     of an artifact. If project/user remotes are available, they are checked
     for the target elements (and their deps, if specified). Artifacts available
